<resources>
    <string name="app_name">Jam Sholat</string>

    <string name="nav_menu_general">Umum</string>
    <string name="nav_menu_break">Jeda</string>
    <string name="nav_menu_correction">Koreksi</string>
    <string name="nav_menu_info">Info Jum\'at</string>

    <string-array name="cor">
        <item>-</item>
        <item>+</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jeda_layar">Jeda Layar (Dalam Menit)</string>
    <string name="jeda_iqomah">Jeda Iqomah (Dalam Menit)</string>
    <string name="zhuhur">Zhuhur</string>
    <string name="ashar">\'Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isya">\'Isya\'</string>
    <string name="shubuh">Shubuh</string>
    <string name="nama_masjid">Nama Masjid (50 Karakter)</string>
    <string name="alamat_masjid">Alamat Masjid (150 Karakter)</string>
    <string name="send">Kirim</string>
    <string name="kecerahan">Kecerahan</string>
    <string name="redup">Redup</string>
    <string name="sedang">Sedang</string>
    <string name="terang">Terang</string>
    <string name="buzzer">Buzzer</string>
    <string name="syuruq">Syuruq</string>
    <string name="khutbah">Khutbah (25 karakter)</string>
    <string name="imam">Imam (25 karakter)</string>
    <string name="muadzin">Muadzin (25 karakter)</string>
    <string name="pengumuman">Pengumuman (60 karakter)</string>
    <string name="lokasi">Lokasi</string>
    <string name="hidup">Hidup</string>
    <string name="mati">Mati</string>
    <string name="msg_error_input">Tidak boleh kosong</string>
    <string name="msg_error_connect">Bluetooth not connected</string>
    <string name="exit">Keluar dari aplikasi</string>
    <string name="jumat">Jum\'at</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="koreksi">Koreksi Waktu (Dalam Menit)</string>
    <string name="menit_default">0 Menit</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="time_zone">Time Zone</string>
    <string name="jam">Sinkronisasi Jam</string>
    <string name="waktu">Singkronisasi Waktu</string>
</resources>
