<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.ncr.jamsholatapp.fragments.GeneralFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin_inside"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.85">

                            <EditText
                                android:id="@+id/input_geo"
                                style="@style/text_input"
                                android:editable="false"
                                android:hint="@string/lokasi"
                                android:text="" />
                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/btn_set_geo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.15"
                            android:src="@drawable/ic_my_location_24dp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_send_geo"
                        style="@style/button_send"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin_inside"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_nama_masjid"
                            style="@style/text_input"
                            android:hint="@string/nama_masjid"
                            android:maxLength="50" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_send_masjid_name"
                        style="@style/button_send"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin_inside"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_alamat_masjid"
                            style="@style/text_input"
                            android:hint="@string/alamat_masjid"
                            android:maxLength="50" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_send_masjid_addres"
                        style="@style/button_send" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin_inside"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kecerahan" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_brights_low"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:text="@string/redup" />

                        <RadioButton
                            android:id="@+id/rb_brights_normal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:checked="true"
                            android:text="@string/sedang" />

                        <RadioButton
                            android:id="@+id/rb_brights_high"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:text="@string/terang" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/btn_send_brights"
                        style="@style/button_send"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin_inside"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/buzzer" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_buzzer_on"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:text="@string/hidup" />

                        <RadioButton
                            android:id="@+id/rb_buzzer_off"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:checked="true"
                            android:text="@string/mati" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.3" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/btn_send_buzzer"
                        style="@style/button_send" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
