<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.ncr.jamsholatapp.fragments.BreakFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin_inside"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_head"
                        android:text="@string/jeda_iqomah" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text_input_numb"
                            android:hint="@string/isya"
                            android:maxLength="50" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text_input_numb"
                            android:hint="@string/shubuh"
                            android:maxLength="50" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text_input_numb"
                            android:hint="@string/zhuhur"
                            android:maxLength="50" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text_input_numb"
                            android:hint="@string/ashar"
                            android:maxLength="50" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text_input_numb"
                            android:hint="@string/maghrib"
                            android:maxLength="50" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        style="@style/button_send" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin_inside"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_head"
                        android:text="@string/jeda_layar" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text_input_numb"
                            android:hint="@string/isya"
                            android:maxLength="50" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text_input_numb"
                            android:hint="@string/shubuh"
                            android:maxLength="50" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text_input_numb"
                            android:hint="@string/zhuhur"
                            android:maxLength="50" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text_input_numb"
                            android:hint="@string/ashar"
                            android:maxLength="50" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text_input_numb"
                            android:hint="@string/maghrib"
                            android:maxLength="50" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        style="@style/button_send" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
