<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.ncr.jamsholatapp.fragments.CorrectionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin_inside"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_head"
                        android:text="@string/koreksi" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/activity_frame_margin"
                        android:paddingTop="@dimen/activity_frame_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/shubuh"
                            android:textSize="20sp" />

                        <SeekBar
                            android:id="@+id/seek_shubuh"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="20"
                            android:progress="10"/>

                        <TextView
                            android:id="@+id/correction_shubuh"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/menit_default"
                            android:gravity="center"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/activity_frame_margin"
                        android:paddingTop="@dimen/activity_frame_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/syuruq"
                            android:textSize="20sp" />

                        <SeekBar
                            android:id="@+id/seek_syuruq"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="20"
                            android:progress="10"/>

                        <TextView
                            android:id="@+id/correction_syuruq"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/menit_default"
                            android:gravity="center"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/activity_frame_margin"
                        android:paddingTop="@dimen/activity_frame_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/zhuhur"
                            android:textSize="20sp" />

                        <SeekBar
                            android:id="@+id/seek_zhuhur"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="20"
                            android:progress="10"/>

                        <TextView
                            android:id="@+id/correction_zhuhur"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/menit_default"
                            android:gravity="center"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/activity_frame_margin"
                        android:paddingTop="@dimen/activity_frame_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ashar"
                            android:textSize="20sp" />

                        <SeekBar
                            android:id="@+id/seek_ashar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="20"
                            android:progress="10"/>

                        <TextView
                            android:id="@+id/correction_ashar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/menit_default"
                            android:gravity="center"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/activity_frame_margin"
                        android:paddingTop="@dimen/activity_frame_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/maghrib"
                            android:textSize="20sp" />

                        <SeekBar
                            android:id="@+id/seek_maghrib"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="20"
                            android:progress="10"/>

                        <TextView
                            android:id="@+id/correction_maghrib"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/menit_default"
                            android:gravity="center"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/activity_frame_margin"
                        android:paddingTop="@dimen/activity_frame_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/isya"
                            android:textSize="20sp" />

                        <SeekBar
                            android:id="@+id/seek_isya"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="20"
                            android:progress="10"/>

                        <TextView
                            android:id="@+id/correction_isya"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/menit_default"
                            android:gravity="center"
                            android:textSize="15sp" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/btn_send_correction"
                        style="@style/button_send"
                        android:layout_marginTop="@dimen/activity_frame_margin" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
